[project]
name = "bush-display-controller"
version = "1.0.0"
description = "E-ink display controller for Bush Display project"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Bush Display Contributors"}
]
keywords = ["e-ink", "display", "waveshare", "raspberry-pi", "epaper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
]

dependencies = [
    "Flask>=3.0.0,<4.0.0",
    "Pillow>=10.0.0",
    "spidev>=3.6",
    "gpiozero>=2.0.0",
]
